--- a/package.json
+++ b/package.json
@@ -46,5 +46,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://127.0.0.1:5000"
+  "proxy": "https://crypt-server.herokuapp.com"
 }
