--- a/package.json
+++ b/package.json
@@ -49,5 +49,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://crypt-oauth2-service.github.io"
+  "homepage": "https://crypt-oauth.web.app"
 }
